cfn.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters: 
  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

  keyName:
    Description: Chose your key pair
    Type: AWS::EC2::KeyPair::KeyName
    Default: 

  Resources:
  myWebServer:
      Type: AWS::EC2::Instance
      Properties:
        ImageId: !Ref latestAmiId
        InstanceType: t2.micro
        KeyName: !Ref keyName
        SecurityGroupIds: 
          - !Ref mySecGrp
        Tags: 
          - Key: Name
            Value: !Sub Web Server of ${AWS::StackName} Stack 
        UserData: !Base64 |
         #! /bin/bash
          yum update -y
          yum install python3 -y
          yum install python3-pip -y
          pip3 install flask
          yum install git -y
          cd /home/ec2-user
          wget -P templates https://raw.githubusercontent.com/awsdevopsteam/roman-number-conventor/master/templates/index.html
          wget -P templates https://raw.githubusercontent.com/awsdevopsteam/roman-number-conventor/master/templates/result.html
          wget https://raw.githubusercontent.com/awsdevopsteam/roman-number-conventor/master/app.py
          python3 app.py

      mySecGrp:
        Type: AWS::EC2::SecurityGroup
        Properties:
        GroupDescription: ssh http and port 8080 # Required
        GroupName: osvaldosecgrpromen
        SecurityGroupIngress: 
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 8080
            ToPort: 8080
            CidrIp: 0.0.0.0/0
  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PIA}
      - PIA: !GetAtt myWebServer.PublicDnsName
    Description: Roman Numerals Converter Application URL
